valumes and character

--- a/characters.html
+++ b/characters.html
@@ -41,49 +41,81 @@
 			<div class="row row-cols-1 row-cols-md-2 row-cols-lg-5 section">
 				<div class="col mb-4">
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
-							<img src="img/liffygif.gif" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
+							<img src="img/luffy.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
 							<div class="card-img-overlay d-flex align-items-end">
-									<a href="characters/luffy.html"><h5 class="card-title card-black stretched-link text-danger-hover">монки д. луффи</h5></a>
+									<a href="characters/luffy.html"><p class="card-title card-black stretched-link text-danger-hover">луффи</p></a>
 							</div>
 					</div>
 				</div>
 				<div class="col mb-4">
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
-						<img src="img/liffygif.gif" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
+						<img src="img/zoro.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
 						<div class="card-img-overlay d-flex align-items-end">
-							<a href="characters/luffy.html"><p class="card-title card-black stretched-link text-danger-hover d-inline-block w-100">Ророноа Зоро</p></a>
-						</div>
-					</div>
-				</div>
-				<div class="col mb-4">
-					<div class="card text-bg-dark shadow-sm bg-body-tertiary flex-row">
-						<img src="img/sanjigif.gif" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
-						<div class="card-img-overlay d-flex align-items-end">
-							<a href="characters/sanji.html"><p class="card-title card-black stretched-link text-danger-hover">Нами</p></a>
+							<a href="characters/zoro.html"><p class="card-title card-black stretched-link text-danger-hover">Зоро</p></a>
 						</div>
 					</div>
 				</div>
 				<div class="col mb-4">
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
-						<img src="img/liffygif.gif" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
+						<img src="img/nami.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
 						<div class="card-img-overlay d-flex align-items-end">
-							<a href="characters/luffy.html"><p class="card-title card-black stretched-link text-danger-hover d-inline-block w-100">Винсмоук Санджи</p></a>
+							<a href="characters/nami.html"><p class="card-title card-black stretched-link text-danger-hover">Нами</p></a>
 						</div>
 					</div>
 				</div>
 				<div class="col mb-4">
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
-						<img src="img/liffygif.gif" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
+						<img src="img/sanji1.png" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
 						<div class="card-img-overlay d-flex align-items-end">
-								<a href="characters/luffy.html"><p class="card-title card-black stretched-link text-danger-hover">Усопп</p></a>
+							<a href="characters/sanji.html"><p class="card-title card-black stretched-link text-danger-hover">Санджи</p></a>
 						</div>
 					</div>
 				</div>
 				<div class="col mb-4">
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
-						<img src="img/liffygif.gif" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
+						<img src="img/usopp.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
 						<div class="card-img-overlay d-flex align-items-end">
-							<a href="characters/luffy.html"><p class="card-title card-black stretched-link text-danger-hover d-inline-block">Тони Тони Чоппер</p></a>
+								<a href="characters/usopp.html"><p class="card-title card-black stretched-link text-danger-hover">Усопп</p></a>
+						</div>
+					</div>
+				</div>
+				<div class="col mb-4">
+					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
+						<img src="img/chopper.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
+						<div class="card-img-overlay d-flex align-items-end">
+							<a href="characters/chopper.html"><p class="card-title card-black stretched-link text-danger-hover">Чоппер</p></a>
+						</div>
+					</div>
+				</div>
+				<div class="col mb-4">
+					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
+						<img src="img/robin.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
+						<div class="card-img-overlay d-flex align-items-end">
+							<a href="characters/robin.html"><p class="card-title card-black stretched-link text-danger-hover">Робин</p></a>
+						</div>
+					</div>
+				</div>
+				<div class="col mb-4">
+					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
+						<img src="img/franky.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
+						<div class="card-img-overlay d-flex align-items-end">
+							<a href="characters/franky.html"><p class="card-title card-black stretched-link text-danger-hover">Френки</p></a>
+						</div>
+					</div>
+				</div>
+				<div class="col mb-4">
+					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
+						<img src="img/brook.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
+						<div class="card-img-overlay d-flex align-items-end">
+							<a href="characters/brook.html"><p class="card-title card-black stretched-link text-danger-hover">Брук</p></a>
+						</div>
+					</div>
+				</div>
+				<div class="col mb-4">
+					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
+						<img src="img/jimbei.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
+						<div class="card-img-overlay d-flex align-items-end">
+							<a href="characters/jimbei.html"><p class="card-title card-black stretched-link text-danger-hover">Джинбей</p></a>
 						</div>
 					</div>
 				</div>
