--- a/characters/luffy.html
+++ b/characters/luffy.html
@@ -20,16 +20,16 @@
         <div class="collapse navbar-collapse " id="navbarNav">
           <ul class="navbar-nav ">
 						<li class="nav-item">
-							<a class="nav-link text-danger-hover" aria-current="page" href="index.html">Главная</a>
+							<a class="nav-link text-danger-hover" aria-current="page" href="../index.html">Главная</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-danger-hover" href="anime.html">Аниме</a>
+							<a class="nav-link text-danger-hover" href="../anime.html">Аниме</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-danger-hover" href="manga.html">Манга</a>
+							<a class="nav-link text-danger-hover" href="../manga.html">Манга</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-danger-hover active" href="characters.html">Персонажи</a>
+							<a class="nav-link text-danger-hover active" href="../characters.html">Персонажи</a>
 						</li>
           </ul>
         </div>
@@ -39,7 +39,7 @@
 		<div class="container">
 			<nav class="section" aria-label="breadcrumb">
 					<ol class="breadcrumb">
-							<li class="breadcrumb-item"><a class="text-danger-hover" href="#">Персонажи</a></li>
+							<li class="breadcrumb-item"><a class="text-danger-hover" href="../characters.html">Персонажи</a></li>
 							<li class="breadcrumb-item active" aria-current="page">Монки Д. Луффи</li>
 					</ol>
 			</nav>
@@ -109,21 +109,21 @@
 			<p>До прибытия на архипелаг Сабаоди за Луффи была назначена награда BeliSymbol300 000 000 и он был одним из одиннадцати пиратов-новичков с наградами за голову в размере более BeliSymbol100 000 000, которые одновременно достигли Рэд Лайн,[33] и теперь является одним из двенадцати пиратов «Худшего Поколения»[34]. После таймскипа награда за голову Луффи стала составлять BeliSymbol400 000 000, как было сказано «Фальшивым Луффи» и подтверждено Пасифистой. Позже, когда команда спустилась на Остров Рыболюдей, Ходи Джонс также показал листовку с ценой за Луффи, на которой была написана его новая награда. После инцидента на Дресс Розе и победы над одним из Ситибукаев — Донкихотом Дофламинго, его награда была увеличена до BeliSymbol500 000 000.[18][19] После инцидента на территории Большой Мамочки Луффи получил награду — BeliSymbol1 500 000 000.[35] После битвы на Онигасиме и победы над Кайдо, награда Луффи увеличилась до BeliSymbol3 000 000 000.</p>
 		</div>
 		<footer class="text-light container" style="background-color: #1f1f1f; border-radius: 15px;">
-				<div class="container py-4 rounded">
-						<div class="row  justify-content-around">
-								<div class="col-md-6">
-										<ul class="list-inline text-center d-flex justify-content-between">
-												<li class="list-inline-item"><a href="#">Главная</a></li>
-												<li class="list-inline-item"><a href="#">Аниме</a></li>
-												<li class="list-inline-item"><a href="#">Манга</a></li>
-												<li class="list-inline-item"><a href="#">Персонажи</a></li>
-										</ul>
-								</div>
-						</div>
-				</div>
-				<div class="text-center p-3 rounded">
-						&copy; 2023 Библиотека One Piece
-				</div>
+			<div class="container py-4 rounded">
+					<div class="row  justify-content-around">
+						<div class="col-md-6">
+							<ul class="list-inline text-center d-flex justify-content-between">
+									<li class="list-inline-item"><a class="text-danger-hover" href="index.html">Главная</a></li>
+									<li class="list-inline-item"><a class="text-danger-hover" href="anime.html">Аниме</a></li>
+									<li class="list-inline-item"><a class="text-danger-hover" href="manga.html">Манга</a></li>
+									<li class="list-inline-item"><a class="text-danger-hover" href="characters.html">Персонажи</a></li>
+							</ul>
+					</div>
+					</div>
+			</div>
+			<div class="text-center p-3 rounded">
+					&copy; 2023 Библиотека One Piece
+			</div>
 		</footer>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
