--- a/characters.html
+++ b/characters.html
@@ -122,6 +122,31 @@
 			</div>
 		</div>
 
+			<div class="container section">
+				<h5 class="border-bottom pb-2">Второстепенные персонажи</h5>
+				<div class="container mt-4">
+					<div class="btn-group" role="group" aria-label="Группы персонажей">
+						<button type="button" class="btn btn-outline-primary" onclick="changeGroup('group1')">Главы 1-200</button>
+						<button type="button" class="btn btn-outline-primary" onclick="changeGroup('group2')">Группа 201-400</button>
+						<button type="button" class="btn btn-outline-primary" onclick="changeGroup('group3')">Главы 401-600</button>
+						<button type="button" class="btn btn-outline-primary" onclick="changeGroup('group4')">Главы 601-800</button>
+						<button type="button" class="btn btn-outline-primary" onclick="changeGroup('group5')">Главы 801-1000</button>
+						<!-- Добавьте остальные кнопки для других групп -->
+					</div>
+
+					<!-- Место для отображения информации о персонажах в выбранной группе -->
+					<div id="characters" class="mt-3">
+						<!-- Здесь будет отображаться информация о персонажах -->
+					</div>
+				</div>
+				<div class="row row-cols-1 row-cols-md-2 row-cols-lg-5 section" id="charactersContainer">
+					<!-- Карточки будут здесь -->
+				</div>
+    	</div>
+
+    <!-- Горизонтальный список кнопок -->
+
+
 		<footer class="text-light container" style="background-color: #1f1f1f; border-radius: 15px;">
 			<div class="container py-4 rounded">
 					<div class="row  justify-content-around">
@@ -142,5 +167,6 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+		<script src="characters.js"></script>
   </body>
 </html>
