--- a/characters.html
+++ b/characters.html
@@ -43,7 +43,7 @@
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 							<img src="img/luffy.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
 							<div class="card-img-overlay d-flex align-items-end">
-									<a href="characters/luffy.html"><p class="card-title card-black stretched-link text-danger-hover">луффи</p></a>
+									<a href="characters/luffy/luffy.html"><p class="card-title card-black stretched-link text-danger-hover">луффи</p></a>
 							</div>
 					</div>
 				</div>
@@ -51,7 +51,7 @@
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 						<img src="img/zoro.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
 						<div class="card-img-overlay d-flex align-items-end">
-							<a href="characters/zoro.html"><p class="card-title card-black stretched-link text-danger-hover">Зоро</p></a>
+							<a href="characters/zoro/zoro.html"><p class="card-title card-black stretched-link text-danger-hover">Зоро</p></a>
 						</div>
 					</div>
 				</div>
@@ -59,7 +59,7 @@
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 						<img src="img/nami.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
 						<div class="card-img-overlay d-flex align-items-end">
-							<a href="characters/nami.html"><p class="card-title card-black stretched-link text-danger-hover">Нами</p></a>
+							<a href="characters/nami/nami.html"><p class="card-title card-black stretched-link text-danger-hover">Нами</p></a>
 						</div>
 					</div>
 				</div>
@@ -67,7 +67,7 @@
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 						<img src="img/sanji1.png" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
 						<div class="card-img-overlay d-flex align-items-end">
-							<a href="characters/sanji.html"><p class="card-title card-black stretched-link text-danger-hover">Санджи</p></a>
+							<a href="characters/sanji/sanji.html"><p class="card-title card-black stretched-link text-danger-hover">Санджи</p></a>
 						</div>
 					</div>
 				</div>
@@ -75,7 +75,7 @@
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 						<img src="img/usopp.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
 						<div class="card-img-overlay d-flex align-items-end">
-								<a href="characters/usopp.html"><p class="card-title card-black stretched-link text-danger-hover">Усопп</p></a>
+								<a href="characters/usopp/usopp.html"><p class="card-title card-black stretched-link text-danger-hover">Усопп</p></a>
 						</div>
 					</div>
 				</div>
@@ -83,7 +83,7 @@
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 						<img src="img/chopper.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
 						<div class="card-img-overlay d-flex align-items-end">
-							<a href="characters/chopper.html"><p class="card-title card-black stretched-link text-danger-hover">Чоппер</p></a>
+							<a href="characters/chopper/chopper.html"><p class="card-title card-black stretched-link text-danger-hover">Чоппер</p></a>
 						</div>
 					</div>
 				</div>
@@ -91,7 +91,7 @@
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 						<img src="img/robin.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
 						<div class="card-img-overlay d-flex align-items-end">
-							<a href="characters/robin.html"><p class="card-title card-black stretched-link text-danger-hover">Робин</p></a>
+							<a href="characters/robin/robin.html"><p class="card-title card-black stretched-link text-danger-hover">Робин</p></a>
 						</div>
 					</div>
 				</div>
@@ -99,7 +99,7 @@
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 						<img src="img/franky.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
 						<div class="card-img-overlay d-flex align-items-end">
-							<a href="characters/franky.html"><p class="card-title card-black stretched-link text-danger-hover">Френки</p></a>
+							<a href="characters/franky/franky.html"><p class="card-title card-black stretched-link text-danger-hover">Френки</p></a>
 						</div>
 					</div>
 				</div>
@@ -107,7 +107,7 @@
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 						<img src="img/brook.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
 						<div class="card-img-overlay d-flex align-items-end">
-							<a href="characters/brook.html"><p class="card-title card-black stretched-link text-danger-hover">Брук</p></a>
+							<a href="characters/brook/brook.html"><p class="card-title card-black stretched-link text-danger-hover">Брук</p></a>
 						</div>
 					</div>
 				</div>
@@ -115,7 +115,7 @@
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 						<img src="img/jimbei.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
 						<div class="card-img-overlay d-flex align-items-end">
-							<a href="characters/jimbei.html"><p class="card-title card-black stretched-link text-danger-hover">Джинбей</p></a>
+							<a href="../characters/jimbei/jimbei.html"><p class="card-title card-black stretched-link text-danger-hover">Джинбей</p></a>
 						</div>
 					</div>
 				</div>
