--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="card text-bg-dark shadow-sm bg-body-tertiary rounded position-relative overflow-hidden">
                 <img src="img/liffygif.gif" class="img-fluid object-fit-cover" style="height: 420px;" alt="...">
                 <div class="card-img-overlay d-flex align-items-end">
-                    <a href="characters/luffy.html"><h5 class="card-title card-black rounded stretched-link text-danger-hover">Луффи</h5></a>
+                    <a href="characters/luffy/luffy.html"><h5 class="card-title card-black rounded stretched-link text-danger-hover">Луффи</h5></a>
                 </div>
             </div>
           </div>
@@ -98,13 +98,13 @@
 						<div class="card text-bg-dark shadow-sm mb-3 bg-body-tertiary rounded flex-row">
 							<img src="img/zorogif.gif" class="img-fluid object-fit-cover" style="height: 150px;" alt="...">
               <div class="card-img-overlay d-flex align-items-end">
-								<a href="characters/zoro.html"><h5 class="card-title card-black rounded stretched-link text-danger-hover">Зоро</h5></a>
+								<a href="characters/zoro/zoro.html"><h5 class="card-title card-black rounded stretched-link text-danger-hover">Зоро</h5></a>
               </div>
             </div>
             <div class="card text-bg-dark shadow-sm mb-3 bg-body-tertiary rounded flex-row">
 							<img src="img/namigif.gif" class="img-fluid object-fit-cover" style="height: 250px;" alt="...">
               <div class="card-img-overlay d-flex align-items-end">
-								<a href="characters/nami.html"><h5 class="card-title card-black rounded stretched-link text-danger-hover">Нами</h5></a>
+								<a href="characters/nami/nami.html"><h5 class="card-title card-black rounded stretched-link text-danger-hover">Нами</h5></a>
               </div>
             </div>
           </div>
@@ -112,7 +112,7 @@
 						<div class="card text-bg-dark shadow-sm bg-body-tertiary rounded flex-row">
 							<img src="img/sanjigif.gif" class="img-fluid object-fit-cover" style="height: 420px;" alt="...">
 							<div class="card-img-overlay d-flex align-items-end">
-								<a href="characters/sanji.html"><h5 class="card-title card-black rounded stretched-link text-danger-hover">Санджи</h5></a>
+								<a href="characters/sanji/sanji.html"><h5 class="card-title card-black rounded stretched-link text-danger-hover">Санджи</h5></a>
 							</div>
 						</div>
 					</div>
@@ -120,13 +120,13 @@
             <div class="card text-bg-dark shadow-sm mb-3 bg-body-tertiary rounded flex-row">
               <img src="img/lawgif.gif" class="img-fluid object-fit-cover" style="height: 250px;" alt="...">
               <div class="card-img-overlay d-flex align-items-end">
-                <a href="characters/law.html"><h5 class="card-title card-black rounded stretched-link text-danger-hover">Ло</h5></a>
+                <a href="characters/law/index.html"><h5 class="card-title card-black rounded stretched-link text-danger-hover">Ло</h5></a>
               </div>
             </div>
             <div class="card text-bg-dark shadow-sm bg-body-tertiary rounded flex-row">
               <img src="img/robin.gif" class="img-fluid object-fit-cover" style="height: 150px;" alt="...">
               <div class="card-img-overlay d-flex align-items-end">
-                <a href="characters/robin.html"><h5 class="card-title card-black rounded stretched-link text-danger-hover">Робин</h5></a>
+                <a href="characters/robin/robin.html"><h5 class="card-title card-black rounded stretched-link text-danger-hover">Робин</h5></a>
               </div>
             </div>
           </div>
