--- a/manga.html
+++ b/manga.html
@@ -10,7 +10,7 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-secondary-subtle nav-underline section" data-bs-theme="dark">
     <div class="container-fluid">
-        <a class="navbar-brand text-danger-hover" href="#">
+        <a class="navbar-brand text-danger-hover" href="index.html">
             <img src="img/01eefe3662a40757d082404a19bce33b.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
             <span class="logo"> Библиотека One Piece</span>
         </a>
@@ -51,7 +51,7 @@
 						</div>
 					</div>
         </div>
-        <!-- Добавьте аналогичные блоки для остальных картинок -->
+
         <div class="col">
 					<div class="card">
 						<img src="img/manga/toms/volume_2.jpg" class="card-img-top" alt="Image 1">
@@ -472,8 +472,10 @@
         &copy; 2023 Библиотека One Piece
     </div>
 </footer>
+<button onclick="topFunction()" id="myBtn" title="Go to top">&uarr;</button>
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script	script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="main.js"></script>
 </body>
 </html>
