--- a/series-2.html
+++ b/series-2.html
@@ -79,8 +79,32 @@
       </div>
     </footer>
 
+
+							<h4 class="mb-4"></h4>
+								<div class="d-flex justify-content-start flex-wrap">
+									<a class="btn btn-danger me-1 mb-2" href="series/series-1.html" type="button">0 серия</a>
+									<a class="btn btn-danger me-1 mb-2" href="series/series-1.html" type="button">1 серия</a>
+									<a class="btn btn-danger me-1 mb-2" href="series/series-1.html" type="button">2 серия</a>
+									<a class="btn btn-danger me-1 mb-2" href="series/series-1.html" type="button">3 серия</a>
+									<a class="btn btn-danger me-1 mb-2" href="series/series-1.html" type="button">4 серия</a>
+									<a class="btn btn-danger me-1 mb-2" href="series/series-1.html" type="button">5 серия</a>
+									<a class="btn btn-danger me-1 mb-2" href="series/series-1.html" type="button">6 серия</a>
+									<a class="btn btn-danger me-1 mb-2" href="series/series-1.html" type="button">7 серия</a>
+									<a class="btn btn-danger me-1 mb-2" href="series/series-1.html" type="button">8 серия</a>
+									<a class="btn btn-danger me-1 mb-2" href="series/series-1.html" type="button">9 серия</a>
+								</div>
+							<hr class="my-4">
+
+
+							<h4 class="mb-4"></h4>
+								<div class="d-flex justify-content-start flex-wrap">
+									
+								</div>
+							<hr class="my-4">
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    
+
 </body>
 </html>
+
