--- a/characters.html
+++ b/characters.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-secondary-subtle nav-underline section" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand text-danger-hover" href="#">
+        <a class="navbar-brand text-danger-hover" href="index.html">
           <img src="img/01eefe3662a40757d082404a19bce33b.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
           <span class="logo"> Библиотека One Piece</span>
         </a>
@@ -36,21 +36,22 @@
       </div>
     </nav>
 
+
 		<div class="container section">
 			<h5 class="border-bottom pb-2">Главные герои</h5>
 			<div class="row row-cols-1 row-cols-md-2 row-cols-lg-5 section">
 				<div class="col mb-4">
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
-							<img src="img/luffy.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
-							<div class="card-img-overlay d-flex align-items-end">
-									<a href="characters/luffy/luffy.html"><p class="card-title card-black stretched-link text-danger-hover">луффи</p></a>
-							</div>
+						<img src="img/luffy1.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
+						<div class="shake card-img-overlay d-flex align-items-end">
+							<a href="characters/luffy/luffy.html"><p class="card-title card-black stretched-link text-danger-hover">Луффи</p></a>
+						</div>
 					</div>
 				</div>
 				<div class="col mb-4">
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 						<img src="img/zoro.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
-						<div class="card-img-overlay d-flex align-items-end">
+						<div class="shake card-img-overlay d-flex align-items-end">
 							<a href="characters/zoro/zoro.html"><p class="card-title card-black stretched-link text-danger-hover">Зоро</p></a>
 						</div>
 					</div>
@@ -58,7 +59,7 @@
 				<div class="col mb-4">
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 						<img src="img/nami.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
-						<div class="card-img-overlay d-flex align-items-end">
+						<div class="shake card-img-overlay d-flex align-items-end">
 							<a href="characters/nami/nami.html"><p class="card-title card-black stretched-link text-danger-hover">Нами</p></a>
 						</div>
 					</div>
@@ -66,7 +67,7 @@
 				<div class="col mb-4">
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 						<img src="img/sanji1.png" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
-						<div class="card-img-overlay d-flex align-items-end">
+						<div class="shake card-img-overlay d-flex align-items-end">
 							<a href="characters/sanji/sanji.html"><p class="card-title card-black stretched-link text-danger-hover">Санджи</p></a>
 						</div>
 					</div>
@@ -74,7 +75,7 @@
 				<div class="col mb-4">
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 						<img src="img/usopp.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
-						<div class="card-img-overlay d-flex align-items-end">
+						<div class="shake-usopp card-img-overlay d-flex align-items-end">
 								<a href="characters/usopp/usopp.html"><p class="card-title card-black stretched-link text-danger-hover">Усопп</p></a>
 						</div>
 					</div>
@@ -82,7 +83,7 @@
 				<div class="col mb-4">
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 						<img src="img/chopper.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
-						<div class="card-img-overlay d-flex align-items-end">
+						<div class="shake card-img-overlay d-flex align-items-end">
 							<a href="characters/chopper/chopper.html"><p class="card-title card-black stretched-link text-danger-hover">Чоппер</p></a>
 						</div>
 					</div>
@@ -90,7 +91,7 @@
 				<div class="col mb-4">
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 						<img src="img/robin.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
-						<div class="card-img-overlay d-flex align-items-end">
+						<div class="shake card-img-overlay d-flex align-items-end">
 							<a href="characters/robin/robin.html"><p class="card-title card-black stretched-link text-danger-hover">Робин</p></a>
 						</div>
 					</div>
@@ -98,7 +99,7 @@
 				<div class="col mb-4">
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 						<img src="img/franky.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
-						<div class="card-img-overlay d-flex align-items-end">
+						<div class="shake card-img-overlay d-flex align-items-end">
 							<a href="characters/franky/franky.html"><p class="card-title card-black stretched-link text-danger-hover">Френки</p></a>
 						</div>
 					</div>
@@ -106,7 +107,7 @@
 				<div class="col mb-4">
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 						<img src="img/brook.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
-						<div class="card-img-overlay d-flex align-items-end">
+						<div class="shake card-img-overlay d-flex align-items-end">
 							<a href="characters/brook/brook.html"><p class="card-title card-black stretched-link text-danger-hover">Брук</p></a>
 						</div>
 					</div>
@@ -114,7 +115,7 @@
 				<div class="col mb-4">
 					<div class="card text-bg-dark shadow-sm bg-body-tertiary position-relative overflow-hidden">
 						<img src="img/jimbei.jpg" class="img-fluid object-fit-cover" style="height: 300px;" alt="...">
-						<div class="card-img-overlay d-flex align-items-end">
+						<div class="shake card-img-overlay d-flex align-items-end">
 							<a href="../characters/jimbei/jimbei.html"><p class="card-title card-black stretched-link text-danger-hover">Джинбей</p></a>
 						</div>
 					</div>
@@ -164,9 +165,11 @@
 					&copy; 2023 Библиотека One Piece
 			</div>
 		</footer>
+		<button onclick="topFunction()" id="myBtn" title="Go to top">&uarr;</button>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 		<script src="characters.js"></script>
+		<script src="main.js"></script>
   </body>
 </html>
