--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse " id="navbarNav">
           <ul class="navbar-nav ">
             <a class="nav-link active text-custom-hover text-danger-hover" aria-current="page" href="index.html">Главная</a>
-            <a class="nav-link text-custom-hover text-danger-hover" href="anime.html">Аниме</a>
+            <a class="nav-link text-custom-hover text-danger-hover color-mama" href="anime.html">Аниме</a>
             <a class="nav-link text-custom-hover text-danger-hover" href="manga.html">Манга</a>
             <a class="nav-link text-custom-hover text-danger-hover" href="characters.html">Персонажи</a>
           </ul>
@@ -62,7 +62,7 @@
           <span class="visually-hidden">Предыдущий</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="carousel-cPntrol-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Следующий</span>
         </button>
       </div>
@@ -89,7 +89,7 @@
           <div class="col mb-4">
             <div class="card text-bg-dark shadow-sm bg-body-tertiary rounded position-relative overflow-hidden">
                 <img src="img/liffygif.gif" class="img-fluid object-fit-cover" style="height: 420px;" alt="...">
-                <div class="card-img-overlay d-flex align-items-end">
+                <div class="card-img-overlay d-flex align-items-end shake">
                     <a href="characters/luffy/luffy.html"><h5 class="card-title card-black rounded stretched-link text-danger-hover">Луффи</h5></a>
                 </div>
             </div>
@@ -97,13 +97,13 @@
           <div class="column mb-4">
 						<div class="card text-bg-dark shadow-sm mb-3 bg-body-tertiary rounded flex-row">
 							<img src="img/zorogif.gif" class="img-fluid object-fit-cover" style="height: 150px;" alt="...">
-              <div class="card-img-overlay d-flex align-items-end">
+              <div class="card-img-overlay d-flex align-items-end shake">
 								<a href="characters/zoro/zoro.html"><h5 class="card-title card-black rounded stretched-link text-danger-hover">Зоро</h5></a>
               </div>
             </div>
             <div class="card text-bg-dark shadow-sm mb-3 bg-body-tertiary rounded flex-row">
 							<img src="img/namigif.gif" class="img-fluid object-fit-cover" style="height: 250px;" alt="...">
-              <div class="card-img-overlay d-flex align-items-end">
+              <div class="card-img-overlay d-flex align-items-end shake">
 								<a href="characters/nami/nami.html"><h5 class="card-title card-black rounded stretched-link text-danger-hover">Нами</h5></a>
               </div>
             </div>
@@ -111,7 +111,7 @@
 					<div class="col mb-4">
 						<div class="card text-bg-dark shadow-sm bg-body-tertiary rounded flex-row">
 							<img src="img/sanjigif.gif" class="img-fluid object-fit-cover" style="height: 420px;" alt="...">
-							<div class="card-img-overlay d-flex align-items-end">
+							<div class="card-img-overlay d-flex align-items-end shake">
 								<a href="characters/sanji/sanji.html"><h5 class="card-title card-black rounded stretched-link text-danger-hover">Санджи</h5></a>
 							</div>
 						</div>
@@ -119,18 +119,17 @@
           <div class="column mb-4">
             <div class="card text-bg-dark shadow-sm mb-3 bg-body-tertiary rounded flex-row">
               <img src="img/lawgif.gif" class="img-fluid object-fit-cover" style="height: 250px;" alt="...">
-              <div class="card-img-overlay d-flex align-items-end">
+              <div class="card-img-overlay d-flex align-items-end shake">
                 <a href="characters/law/index.html"><h5 class="card-title card-black rounded stretched-link text-danger-hover">Ло</h5></a>
               </div>
             </div>
             <div class="card text-bg-dark shadow-sm bg-body-tertiary rounded flex-row">
               <img src="img/robin.gif" class="img-fluid object-fit-cover" style="height: 150px;" alt="...">
-              <div class="card-img-overlay d-flex align-items-end">
+              <div class="card-img-overlay d-flex align-items-end shake">
                 <a href="characters/robin/robin.html"><h5 class="card-title card-black rounded stretched-link text-danger-hover">Робин</h5></a>
               </div>
             </div>
           </div>
-          <!-- Добавьте другие карточки в аналогичном формате -->
         </div>
 				<h2 class="h2">Популярные эпизоды</h2>
 				<div class="section">
